--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
+/*https://github.com/necolas/normalize.css/blob/master/LICENSE.md*/
+/*All credit goes to Nicolas Gallagher and Jonathan Neal*/
 
 /**
  * 1. Set default font family to sans-serif.
