added something to a diff branch

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -29,4 +29,5 @@ input {
 	padding: 8px 15px;
 	background: #80b1ea;
 }
-/*Hi :D hoho*/
+/*Hi :D hohohohohohoohoh*/
+/*All of this crap is what i am trying to do on a different branch!*/
